--- a/source/styles/mobiles.scss
+++ b/source/styles/mobiles.scss
@@ -11,6 +11,7 @@
 header{
 	background-color: #f0e2f5;
 }
+
 	
 header img {
     max-width: 160px;
@@ -131,7 +132,17 @@ header .logo img {
     padding-top: 18px ;
 }
 
+.video-apresentacao iframe{
+    max-width: 100%;
+    width: 800px;
+    max-height: 200px;
+    height: 400px;
+    margin-top: 40px;
+    margin-bottom: 100px;
 }
+
+}
+
 
 
 @media screen and (max-width: 398px){
