corrigindo tamanho de fontes

--- a/source/styles/mobiles.scss
+++ b/source/styles/mobiles.scss
@@ -140,7 +140,24 @@ header .logo img {
     margin-top: 40px;
     margin-bottom: 100px;
 }
-
+.apresentacao-tati .container h1{
+    font-family: 'Poppins', sans-serif;
+    font-style: italic;
+	font-size: 20px;
+}
+.apresentacao-tati .container p{
+    font-family: 'Poppins', sans-serif;
+    max-width: 900px;
+    color: rgb(68, 70, 70);
+	font-size: 14px;
+}
+.apresentacao-tati .container h5{
+    font-family: 'Poppins', sans-serif;
+    font-style: italic;
+    padding-top: 30px;
+    color: rgb(68, 70, 70);
+	font-size: 16px;
+}
 }
 
 
