--- a/source/styles/mobiles.scss
+++ b/source/styles/mobiles.scss
@@ -169,6 +169,12 @@ header .logo img {
 		height: 800px;
 		max-height: 190px;
 	}
+	.col-md-6 h2 {
+		font-size: 16px;
+	}
+	#bem-vindo .col-md-6 p{
+		font-size: 12px;
+	}
 }
 @media screen and (max-width: 368px){
 	section img{
